<resources>
    <string name="app_name">login2</string>
    <string name="user">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="backtologin">Back to login</string>
    <string name="title_activity_signup">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_post">New Post</string>
    <string name="menu_donations">Donations</string>
    <string name="menu_receivers">Receivers</string>
    <string name="menu_logout">Log out</string>
    <string name="namePlaceholder">Name Not Entered</string>

    <string name="firstname">Name</string>
    <string name="lastname">Last Name</string>
    <string name="confpass">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="organization">Organization</string>
    <string name="upload">UPLOAD</string>
    <string name="select">SELECT</string>
    <string name="caption">Caption</string>
    <string name="title">Title</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="house_ware">House ware</string>
    <string name="technology">Technology</string>
    <string name="volunteering">Volunteering</string>
    <string name="clothing">Clothing</string>
    <string name="food">Food</string>
    <string name="upload_image_post">Upload Image Post</string>
    <string name="select_image_to_post">Select Image To Post</string>
    <string name="about_us">ABOUT US</string>
    <string name="about_us_text_one">We aim to connect donors to organizations to help those in need. All donations are welcome, big or small.</string>
    <string name="about_us_text_two">Navigate to either the donations or receiving page to get your needs to help those in need.</string>
    <string name="make_a_difference">MAKE A DIFFERENCE</string>

</resources>