<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/baseline_handshake_24"
            android:title="@string/menu_donations" />

        <item
            android:id="@+id/nav_receivers"
            android:icon="@drawable/baseline_family_restroom_24"
            android:title="@string/menu_receivers" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_post" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />

    </group>
</menu>