<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.donationsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donations"
        android:name="com.example.donationsapp.ui.donations.DonationsFragment"
        android:label="@string/menu_donations"
        tools:layout="@layout/fragment_donations" />

    <fragment
        android:id="@+id/nav_receivers"
        android:name="com.example.donationsapp.ui.receivers.ReceiversFragment"
        android:label="@string/menu_receivers"
        tools:layout="@layout/fragment_receivers" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.donationsapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.donationsapp.LogIn"
        android:label="@string/menu_logout"
        tools:layout="@layout/login_activity" />

</navigation>