<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".NewReceiversPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/upload" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/foodPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/food" />

            <RadioButton
                android:id="@+id/clothingPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clothing" />

            <RadioButton
                android:id="@+id/volunteeringPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteering" />

            <RadioButton
                android:id="@+id/techPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology" />

            <RadioButton
                android:id="@+id/housewarePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_ware" />

            <RadioButton
                android:id="@+id/etcPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miscellaneous" />

        </RadioGroup>

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_text_border"
            android:gravity="top"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="15dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

        <EditText
            android:id="@+id/postCaption"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_border"
            android:gravity="top"
            android:hint="@string/caption"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="15dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/selectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/darkblue"
            android:contentDescription="@string/select_image_to_post"
            android:text="@string/select" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/darkblue"
            android:contentDescription="@string/upload_image_post"
            android:text="@string/upload" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:contentDescription="@string/upload_image_post"
            android:text="BACK" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>